# q2-pinocchio

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .q2lintignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
ci/recipe/: mata.yaml  meta.yaml
conda-recipe/: meta.yaml
q2_long_reads_qc/: __init.py__  __init__.py  _action_params.py  _filtering_utils.py  _utils.py  _version.py  build_index.py  citations.bib  classify_consensus.py  extract_seqs.py  filter_reads.py  minimap2.py  plugin_setup.py
q2_long_reads_qc/classification/: __init__.py  classify_consensus_minimap2.py
q2_long_reads_qc/filtering/: __init__.py  _filtering_utils.py  filter_reads.py
q2_long_reads_qc/longqc/: __init.py__  evaluate.py
q2_long_reads_qc/minimap2/: __init__.py  _filtering_utils.py  build_minimap2_index.py  filter_reads.py  minimap2_build.py  minimap2_search.py
q2_long_reads_qc/tests/: __init__.py  test_consensus.py  test_extract_seqs.py  (+6 more)
q2_minimap2/: __init__.py  _action_params.py  _filtering_utils.py  _utils.py  _version.py  build_index.py  citations.bib  classify_consensus.py  extract_seqs.py  filter_paired_end_reads.py  filter_reads.py  filter_single_end_reads.py  minimap2.py  minimap2_search.py  nanoplot_stats.py  plugin_setup.py  trim_long_reads.py
q2_pinocchio/: __init__.py  _action_params.py  _filtering_utils.py  _version.py  build_index.py  classify_consensus.py  extract_reads.py  extract_seqs.py  filter_reads.py  minimap2_search.py  nanoplot_stats.py  plugin_setup.py  trim_long_reads.py
(+63 files in other folders)
